--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PhotoEditor">
+        <activity android:name=".CubeActivity"></activity>
+        <activity android:name=".SplinesActivity" />
+        <activity android:name=".SegmentationActivity" />
+        <activity android:name=".ColorCorrectionActivity" />
+        <activity android:name=".ScalingActivity" />
+        <activity android:name=".RotationActivity" />
+
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/file_paths" />
