--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation group: 'org.bytedeco', name: 'javacv', version: '1.4.1'
     implementation "org.bytedeco.javacpp-presets:opencv:3.4.1-1.4.1:android-arm"
+    implementation 'com.android.support:design:28.0.0'
 }
