--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PhotoEditor">
         <activity android:name=".LimitedEffectsActivity"></activity>
-        <activity android:name=".UnsharpMaskActivity" />
+        <activity android:name=".effect_activities.UnsharpMaskActivity" />
         <activity android:name=".CubeActivity" />
         <activity android:name=".SplinesActivity" />
         <activity android:name=".SegmentationActivity" />
         <activity android:name=".ColorCorrectionActivity" />
         <activity android:name=".ScalingActivity" />
-        <activity android:name=".RotationActivity" />
+        <activity android:name=".effect_activities.RotationActivity" />
         <activity android:name=".RetouchingActivity" />
 
         <meta-data
