--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     implementation group: 'org.bytedeco', name: 'javacv', version: '1.4.1'
     implementation "org.bytedeco.javacpp-presets:opencv:3.4.1-1.4.1:android-arm"
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.github.shts:TriangleLabelView:1.1.2'
 }
